<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="@dimen/margin_25"
        android:layout_marginStart="@dimen/margin_25"
        android:orientation="vertical"
        android:weightSum="1">

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.01" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/margin_10"
            android:layout_weight="0.09"
            android:gravity="center"
            android:text="@string/identify_areas"
            android:textColor="@color/white"
            android:textSize="@dimen/margin_15" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.05"
            android:gravity="center"
            android:text="@string/click_all"
            android:textColor="@color/white"
            android:textSize="@dimen/margin_13" />


        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.02" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.05"
            android:gravity="center"
            android:text="@string/demographic_expertise"
            android:textColor="@color/white"
            android:textSize="@dimen/margin_13" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.01" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/demographic_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.23">

        </android.support.v7.widget.RecyclerView>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.04" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.05"
            android:gravity="center"
            android:text="@string/additional_languages"
            android:textColor="@color/white"
            android:textSize="@dimen/margin_13" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.01" />

        <EditText
            android:id="@+id/additional_language"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.07"
            android:background="@drawable/border_bg"
            android:hint="@string/type_here"
            android:paddingEnd="@dimen/margin_4"
            android:paddingLeft="@dimen/margin_8"
            android:paddingRight="@dimen/margin_4"
            android:paddingStart="@dimen/margin_8"
            android:textSize="@dimen/margin_13" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.02" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.05"
            android:gravity="center"
            android:text="@string/insurance_plan_accepted"
            android:textColor="@color/white"
            android:textSize="@dimen/margin_13" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.01" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.06"
            android:background="@drawable/spinner_bg">

            <Spinner
                android:id="@+id/insurance_spinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/margin_8"
                android:layout_marginStart="@dimen/margin_8"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:spinnerMode="dropdown" />

            <TextView
                android:id="@+id/insurance_default"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin_4"
                android:layout_marginLeft="@dimen/margin_8"
                android:layout_marginStart="@dimen/margin_8"
                android:background="@color/white"
                android:gravity="center"
                android:text="@string/select"
                android:textSize="@dimen/margin_13" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:src="@drawable/ic_arrow_drop_down_black_36dp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.02" />
        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.02" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/margin_8"
            android:layout_marginTop="@dimen/margin_4"
            android:layout_weight="0.002"
            android:background="@color/white" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.03" />

        <Button
            android:id="@+id/next_click"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.06"
            android:background="@drawable/button_bg"
            android:gravity="center"
            android:text="@string/next_step"
            android:textColor="@color/white" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.01" />

        <TextView
            android:id="@+id/terms_conditions"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.08"
            android:gravity="center"
            android:text="@string/terms_conditions"
            android:textColor="@color/white"
            android:textSize="@dimen/margin_15" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.01" />

    </LinearLayout>
</LinearLayout>